test_regress/t/t_interface_param_another_bad.out
%Error-HIERPARAM: t/t_interface_param_another_bad.v:9:35: Parameter values cannot use hierarchical values (IEEE 1800-2023 6.20.2)
                                                        : ... note: In instance 't'
    9 |   simple_bus #(.PARAMETER(sb_intf.dummy)) simple ();
      |                                   ^~~~~
                  ... For error description see https://verilator.org/warn/HIERPARAM?v=latest
%Error: t/t_interface_param_another_bad.v:9:35: Expecting expression to be constant, but variable isn't const: 'dummy'
                                              : ... note: In instance 't'
    9 |   simple_bus #(.PARAMETER(sb_intf.dummy)) simple ();
      |                                   ^~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_interface_param_another_bad.v:9:17: Can't convert defparam value to constant: Param 'PARAMETER' of 'simple'
                                              : ... note: In instance 't'
    9 |   simple_bus #(.PARAMETER(sb_intf.dummy)) simple ();
      |                 ^~~~~~~~~
%Error: Exiting due to
